# coffeebeans-de-assignment

./: README.md  pyproject.toml
DE/: pyvenv.cfg
coffeebeans_dataeng_exercise/: db.py  ingest.py  outliers.py
coffeebeans_dataeng_exercise/scripts/: exercise.py
docs/: calculating_outliers.tex
tests/: ingest_test.py  outliers_test.py
tests/exercise_tests/: test_ingestion.py  test_outliers.py
